--- a/UI.ui
+++ b/UI.ui
@@ -1,4 +1,4 @@
-'''<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>yellowcircles</class>
  <widget class="QMainWindow" name="yellowcircles">
@@ -43,4 +43,4 @@
  </widget>
  <resources/>
  <connections/>
-</ui>'''
+</ui>
